--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "nodemon index.js",
     "dev": "nodemon index.js",
-    "setup": "npm i && node ."
+    "setup": "npm i && node .",
+    "post": "git add . && git commit -m edited && git push origin main"
   },
   "repository": {
     "type": "git",
